--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "jest",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "npm run build"
   },
   "keywords": [],
-  "author": "",
+  "author": "Marc Tyson CLEBERT <marctysonclebert9@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^22.7.4",
