--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,16 @@
   "compilerOptions": {
     "target": "es2018",
     "module": "commonjs",
-    "declaration": true,
     "outDir": "./dist",
+    "rootDir": "./src",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "declaration": true,
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
