--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ip-navigator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "dev": "tsx --watch src/index.ts"
   },
   "keywords": [],
   "author": "Marc Tyson CLEBERT <marctysonclebert9@gmail.com>",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^22.7.4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   }
 }
