--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "npm run build",
-    "dev": "tsx --watch src/index.ts"
+    "dev": "tsx --watch src/index.ts",
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "Marc Tyson CLEBERT <marctysonclebert9@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
