--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "ip-navigator",
   "version": "1.0.13",
-  "description": "",
+  "description": "A tool for IP address manipulation and calculation",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "LICENSE",
     "README.md"
   ],
   "publishConfig": {
