--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,30 @@
 {
   "compilerOptions": {
-    "target": "es2018",
+    "target": "es5",
     "module": "commonjs",
     "outDir": "./dist",
+    "rootDir": "./src",
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    },
     "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*", "lib"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
+
+// {
+//   "compilerOptions": {
+//     "target": "es5",
+//     "module": "commonjs",
+//     "declaration": true,
+//     "outDir": "./lib",
+//     "strict": true
+//   },
+//   "include": ["src"],
+//   "exclude": ["node_modules", "**/__tests__/*"]
+// }
